# CameraCalibration

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
data/: config_ir.yaml
include/camera/: brown_camera.hpp
include/estimator/: camera_calibrator.h  project_cost.hpp
include/geometry/: chessboard.hpp  transform.hpp
include/utility/: kdtree.hpp
samples/: CMakeLists.txt  calibrate.cpp  calibrate_camera.cpp  calibrate_with_image.cpp  generate_calib_data.cpp
scripts/: config.yml
src/: camera_calibrator.cpp
tests/: CMakeLists.txt
tests/include/: test_utils.hpp
tests/src/: test_camera.cpp  test_geometry.cpp
